Add Tomcat demo